2008-05-11 Alejandro G. Castro <acastro@igalia.com>

	* src/baobab-ringschart.c: Added a new extended timeout for the
	subfolders tooltips. A memory leak and some small style
	modifications.
	(draw_tooltips): extended the condition for drawing the subfolders
	tooltips, we do not draw them until the second timeout.
	(draw_folder_tip): Fixed a memory leak.
	(baobab_ringschart_no_pointer_motion): Added a second timeout
	where we set to TRUE the draw_children_tooltips variable.	
	
2008-05-11 Alejandro G. Castro <acastro@igalia.com>

	* src/baobab.c:
	(baobab_stop_scan): Remove three lines setting the status of the
	application from this function, baobab_scan_location is already
	doing these actions, so the functions were called twice.
	
2008-05-08 Alejandro G. Castro <acastro@igalia.com>

	Patch cotributed by Victor Jaquez <vjaquez@igalia.com>
	
	* src/baobab-ringschart.c (bug #528165):
	(baobab_ringschart_expose): Added code to control Enhance the
	scale operation of the screenshot image, not it scales properly.
	
2008-05-08 Alejandro G. Castro <acastro@igalia.com>

	Patch contributed by Felipe Erias <femorandeira@igalia.com>, Pablo
	Santamaria <psantamaria@igalia.com>, Jacobo Aragunde
	<jaragunde@igalia.com> and Eduardo Lima <elima@igalia.com>
	
	Enhancement to the ringschart widget, added multiple tooltips
	support (bug #421473)

	* src/baobab.c:
	(baobab_scan_location): We set the max depth after scanning in
	order to zoom the graphic as much as possible.
	(baobab_subfolderstips_toggled): This function is a callback that
	manages changes in the gconf key that controls the subfolders
	tips.
	(baobab_init): Monitor the gconf subfolders tooltips key
	connecting the callback.
	(create_context_menu): Create a context menu with three actions:
	go to the parent, zoom in and zoom out.
	(initialize_ringschart): Initialize max_depth so we get the
	biggest zoom for the initial ringschart. We also get the gconf
	value for the subfolders tips and create the context menu.
