@@ -1,3 +1,10 @@
+2008-05-11  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab-utils.c: 
+	* src/baobab-utils.h:
+	
+	Fixed trash logic
+
 2008-05-11 Alejandro G. Castro <acastro@igalia.com>
 
 	* src/baobab-ringschart.c: Added a new extended timeout for the
